--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {
-    margin:0 auto;
+HTML {
+    margin:0;
     padding:0;
     box-sizing: border-box;
     font-family:Helvetica;
@@ -7,9 +7,27 @@ body {
     color: seashell;
     background-color:black;
     opacity:0.9;
+    text-align: center;
 }
 header {
-    position: fixed;
+    box-sizing: border-box;
+    align-items:center;
+    display:inline-flex;
+    justify-content: space-between;
+    border-bottom: 1px solid seashell;
+    width: 100%;
     height:69px;
-    
+    background-color: black;
+}
+
+header img {
+padding: 10px;
+height:50px;
+}
+
+header h1 {
+    padding: 0px 5px;
+    display:inline-flex;
+    text-decoration:underline;
+    font-size: 1em;
 }
