--- a/style.css
+++ b/style.css
@@ -1,33 +1,124 @@
+
 HTML {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family:Helvetica;
-    font-size:22px;
+    font-family: Helvetica;
+    font-size: 22px;
     color: seashell;
-    background-color:black;
-    opacity:0.9;
+    background-color: black;
+    opacity: 0.9;
     text-align: center;
 }
+main {
+    margin: 0 auto;
+    justify-content: center;
+    flex-flow:column;
+   display:flex;
+    align-items:center;
+    width:1200px;
+}
+
 header {
     box-sizing: border-box;
-    align-items:center;
-    display:inline-flex;
+    align-items: center;
+    display: inline-flex;
     justify-content: space-between;
     border-bottom: 1px solid seashell;
     width: 100%;
-    height:69px;
+    height: 69px;
     background-color: black;
+    position: fixed;
+    top:0;
+    left:0;
 }
 
 header img {
-padding: 10px;
-height:50px;
+    padding: 10px;
+    height: 50px;
 }
 
 header h1 {
     padding: 0px 5px;
-    display:inline-flex;
-    text-decoration:underline;
+    display: inline-flex;
+    text-decoration: underline;
     font-size: 1em;
+}
+
+.Mission {
+    background-image: url(https://content.codecademy.com/courses/freelance-1/unit-4/img-mission-background.jpg);
+    justify-content:center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 700px;
+    width: 1200px;
+
+}
+
+.Mission h2 {
+    margin:0px;
+    padding: 5px 5px 15px 0px;
+    background: black;
+    width:100%;
+}
+
+.Mission h4 {
+    margin:0;
+    padding: 5px 5px;
+    background: black;
+    width:100%;
+}
+
+.Monthly {
+    display:block;
+    margin: auto;
+    width: 1000px;
+    justify-content: space-evenly;
+}
+
+.MonthlyImages {
+    display:flex;
+    width:1000px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.image {
+    margin: 10px 10px;
+    width: 300px;
+    margin-bottom: 10px;
+}
+
+.image img {
+    max-width: 100%;
+
+}
+.Locations {
+    justify-content:center;
+    align-items:center;
+    flex-direction: column;
+    display:flex;
+    background-image: url(https://content.codecademy.com/courses/freelance-1/unit-4/img-locations-background.jpg);
+    height:500px;
+    width:1200px;
+}
+
+.LocationsContainer{
+    display:flex;
+    flex-direction: row;
+    align-items:center;
+}
+#downtown, #East-Bayside, #Oakdale {
+background:black;
+width:300px;
+margin:15px 20px;
+}
+
+
+
+footer {
+    margin:20px;
+    text-align: left;
 }
